--- a/src/styles/output.css
+++ b/src/styles/output.css
@@ -648,6 +648,10 @@ video {
   height: 100%;
 }
 
+.max-h-\[400px\] {
+  max-height: 400px;
+}
+
 .w-28 {
   width: 7rem;
 }
@@ -702,6 +706,10 @@ video {
 
 .gap-7 {
   gap: 1.75rem;
+}
+
+.overflow-auto {
+  overflow: auto;
 }
 
 .rounded {
