(FEAT:script.js): adicionado aviso de fechados ou abertos, adicionado envio para wpp

--- a/src/styles/output.css
+++ b/src/styles/output.css
@@ -751,6 +751,11 @@ video {
   border-width: 4px;
 }
 
+.border-red-500 {
+  --tw-border-opacity: 1;
+  border-color: rgb(239 68 68 / var(--tw-border-opacity, 1));
+}
+
 .bg-\[\#f95c99\] {
   --tw-bg-opacity: 1;
   background-color: rgb(249 92 153 / var(--tw-bg-opacity, 1));
@@ -773,6 +778,11 @@ video {
 .bg-pink-200 {
   --tw-bg-opacity: 1;
   background-color: rgb(251 207 232 / var(--tw-bg-opacity, 1));
+}
+
+.bg-red-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity, 1));
 }
 
 .bg-white {
