--- a/src/styles/output.css
+++ b/src/styles/output.css
@@ -656,6 +656,10 @@ video {
   height: 100%;
 }
 
+.h-4 {
+  height: 1rem;
+}
+
 .max-h-\[400px\] {
   max-height: 400px;
 }
@@ -670,6 +674,10 @@ video {
 
 .w-full {
   width: 100%;
+}
+
+.w-4 {
+  width: 1rem;
 }
 
 .min-w-\[90\%\] {
